--- a/To_do_list/index.html
+++ b/To_do_list/index.html
@@ -2,17 +2,21 @@
 <head>
     <meta charset="UTF-8">
     <title>To do List</title>
+    <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
+<h1>To do List</h1>
 <div id="app">
+    <!-- Botão para adicionar uma tarefa -->
+    <input type="text" placeholder="Digite uma tarefa">
+<button>ADD</button>
+
+<!-- A Lista -->
 <ul>
 </ul> 
 
-<input type="text" placeholder="Digite uma tarefa">
-<button>Adicionar</button>
+
 </div>
-
-
 
 <script src="todos.js"></script>
 </body>
