--- a/To_do_list/index.html
+++ b/To_do_list/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h1>To do List</h1>
-<div id="app">
+<div id="app"> <div class = "background">
     <!-- Botão para adicionar uma tarefa -->
-    <input type="text" placeholder="Digite uma tarefa">
+<input type="text" placeholder="Digite uma tarefa">
 <button>ADD</button>
-
+</div>
 <!-- A Lista -->
 <ul>
 </ul> 
