--- a/Calc/index.html
+++ b/Calc/index.html
@@ -34,10 +34,11 @@
 </div>
 
 <div id="quarta">
-<input type="button" value="C" class='botao borda' onclick ="reseta()">
-<input type="button" value="0" class='botao borda' onclick ="botao(value)">
-<input type="button" value="+" class='botao borda' onclick ="calcula()">
-<input type="button" value="=" class='botao borda' onclick ="botao(value)">
+  <input type="button" value="C" class="botao borda" onclick="reseta()">
+  <input type="button" value="0" class="botao borda" onclick="botao(value)">
+
+  <input type="button" value="+" class="botao borda" onclick="botao(value)">
+  <input type="button" value="=" class="botao borda" onclick="calcula()">
 </div>
 
 </div>
