--- a/To_do_list/index.html
+++ b/To_do_list/index.html
@@ -1,23 +1,21 @@
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>To do List</title>
-    <link rel = "stylesheet" href = "styles.css">
-</head>
-<body>
-<h1>To do List</h1>
-<div id="app"> <div class = "background">
-    <!-- Botão para adicionar uma tarefa -->
-<input type="text" placeholder="Digite uma tarefa">
-<button>ADD</button>
-</div>
-<!-- A Lista -->
-<ul>
-</ul> 
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1>To do List</h1>
+    <div id="app">
+      <div class="background">
+        <!-- Button to add a task -->
+        <input type="text" placeholder="Enter a task" />
+        <button>ADD</button>
+      </div>
+      <!-- The list -->
+      <ul></ul>
+    </div>
 
-
-</div>
-
-<script src="todos.js"></script>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
