--- a/05 - Password generator/pw.html
+++ b/05 - Password generator/pw.html
@@ -2,17 +2,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gerador de senha</title>
-    <link rel="stylesheet" href="main.css" />
+    <title>Password generator</title>
+    <link rel="stylesheet" href="pw.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Gerador de senha</h1>
+      <h1>Password generator</h1>
 
       <div>
-        <label>Qual tamanho da senha?</label>
+        <label>What length of password?</label>
         <input type="number" id="pass" min="" max="15" />
-        <button onclick="generatePass()">Gerar senha</button>
+        <button onclick="generatePass()">Generate Password</button>
       </div>
     </div>
 
@@ -20,5 +20,5 @@
       <span id="newPassword"> </span>
     </div>
   </body>
-  <script src="main.js"></script>
+  <script src="pw.js"></script>
 </html>
