--- a/01 - To-do-list/list.html
+++ b/01 - To-do-list/list.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>To do List</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="list.css" />
   </head>
   <body>
     <h1>To do List</h1>
@@ -16,6 +16,6 @@
       <ul></ul>
     </div>
 
-    <script src="main.js"></script>
+    <script src="list.js"></script>
   </body>
 </html>
