--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <div class="links">
 <a href="01 - To-do-list/list.html">Todo-do-list</a>
-<a href="01 - calc/index.html">Todo-do-list</a>
+<a href="01 - calc/calc.html">Todo-do-list</a>
 </body>
 </html>
