--- a/03 - Significant or not/significant.html
+++ b/03 - Significant or not/significant.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Valor Teste P</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="Significant.css" />
   </head>
   <body>
     <div class="container">
@@ -24,6 +24,6 @@
       <button onclick="resetar()">Limpar</button>
     </div>
 
-    <script src="valorp.js"></script>
+    <script src="significant.js"></script>
   </body>
 </html>
