--- a/07 - Drum-Kit/Drum-Kit.html
+++ b/07 - Drum-Kit/Drum-Kit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>JS Drum Kit</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Drum-Kit.css" />
   </head>
   <body>
     <h1>Drum Kit</h1>
@@ -50,6 +50,6 @@
     <audio data-key="73" src="sounds/Big-Rack-Tom.mp3"></audio>
     <audio data-key="32" src="sounds/Snare.mp3"></audio>
 
-    <script src="main.js"></script>
+    <script src="Drum-Kit.js"></script>
   </body>
 </html>
