--- a/08 - Piano/Piano.html
+++ b/08 - Piano/Piano.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Piano</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Piano.css" />
   </head>
   <body>
     <h1>Piano</h1>
@@ -100,6 +100,6 @@
     ></audio>
     <audio data-key="186" src="sounds/316902__jaz-the-man-2__la.wav"></audio>
 
-    <script src="main.js"></script>
+    <script src="Piano.js"></script>
   </body>
 </html>
