--- a/09 - Padding-Css/Padding-Css.html
+++ b/09 - Padding-Css/Padding-Css.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="Padding-Css.css" />
     <title>Scoped CSS Variables and JS</title>
   </head>
   <body>
@@ -37,5 +37,5 @@
 
     <img src="https://source.unsplash.com/collection/1599044/500x500" />
   </body>
-  <script src="main.js"></script>
+  <script src="Padding-Css.js"></script>
 </html>
