--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <body>
 <div class="links">
 <a href="01 - To-do-list/list.html">Todo-do-list</a>
-<a href="01 - calc/calc.html">Todo-do-list</a>
+<a href="02 - Calc/calc.html">Calc</a>
+<a href="03 - Significant or not/significant.html">Significant</a>
+<a href="04 - Navigation-tabs/navigation-tabs.html">Navigation-tabs</a>
+<a href="05 - Password generator/pw.html">Password</a>
+<a href="06 - Calc IMC/imc.html">Imc</a>
+<a href="07 - Drum-Kit/Drum-Kit.html">Drum KIt</a>
+<a href="08 - Piano/Piano.html">Piano</a>
+<a href="09 - Padding-Css/Padding-Css.css">Padding-Css</a>
+
 </body>
 </html>
