--- a/06 - Calc IMC/imc.html
+++ b/06 - Calc IMC/imc.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IMC</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="imc.css" />
   </head>
   <body>
     <h3 class="text-header">
@@ -17,6 +17,6 @@
 
     <div id="result"></div>
     <button onclick="converter()">Resultado</button>
-    <script src="main.js"></script>
+    <script src="imc.js"></script>
   </body>
 </html>
