--- a/09 - Padding-Css/Padding-Css.html
+++ b/09 - Padding-Css/Padding-Css.html
@@ -6,7 +6,7 @@
     <title>Scoped CSS Variables and JS</title>
   </head>
   <body>
-    <h2>Update CSS Variables with <span class="hl">JS</span></h2>
+    <h2>Spacing - Brightness CSS <span class="hl">JS</span></h2>
 
     <div class="controls">
       <label for="spacing">Spacing:</label>
@@ -32,7 +32,7 @@
       />
 
       <label for="base">Base Color</label>
-      <input id="base" type="color" name="base" value="#ffc600" />
+      <input id="base" type="color" name="base" value="#61ffa8" />
     </div>
 
     <img src="https://source.unsplash.com/collection/1599044/500x500" />
